deploy/templates/app.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: prod-bot-api
  labels:
    app: bot-api
    env: prod
spec:
  replicas: 1
  selector:
    app: bot-api
    env: prod
  triggers:
    - type: ImageChange
      imageChangeParams:
        containerNames:
          - bot-api
        from:
          kind: ImageStreamTag
          name: bot-api:latest
  template:
    metadata:
      labels:
        app: bot-api
        env: prod
    spec:
      containers:
        - name: bot-api
          image: kscout/bot-api:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: prod-bot-api
  labels:
    app: bot-api
    env: prod
spec:
  type: ClusterIP
  selector:
    app: bot-api
    env: prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
      name: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: prod-bot-api
  labels:
    app: bot-api
    env: prod
spec:
  host: bot.kscout.io
  path: /
  to:
    kind: Service
    name: prod-bot-api
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
status:
  ingress:
    - host: bot.kscout.io
